稍微优化了锚点系统